# handwriting-synthesis

./: .gitignore  app.py  demo.py  drawing.py  prepare_data.py  pyproject.toml  readme.md  requirements.txt  rnn.py  rnn_cell.py  rnn_ops.py  tf_base_model.py  tf_utils.py
